# cloudbus

./: .dockerignore  .gitignore  CMakeLists.txt  DEVELOPER-NOTES.md  Dockerfile  Makefile  Makefile.am  README.md  configure.ac  controller.ini.orig  segment.ini.orig
.github/workflows/: build.yml  c-cpp.yml  tests.yml
benchmarks/benchmark-four/: README.md
benchmarks/benchmark-four/artifacts/: results.csv
benchmarks/benchmark-four/conf/: controller.ini  controller.service  segment.ini  segment.service
benchmarks/benchmark-one/: .gce-environment  README.md  Single Server Benchmark.jmx
benchmarks/benchmark-one/artifacts/: results.csv
benchmarks/benchmark-three/: .gce-environment  README.md
benchmarks/benchmark-three/artifacts/: results.csv
benchmarks/benchmark-three/conf/: gateway.conf
benchmarks/benchmark-two/: .gce-environment  README.md  Single Server Benchmark.jmx
benchmarks/benchmark-two/artifacts/: results.csv
benchmarks/benchmark-two/conf/: controller.ini  segment.ini
conf/: controller.ini.orig  segment.ini.orig
conf/systemd/: controller.service.in  segment.service.in
manual/: chapters.tex  manual.tex  preamble.tex
manual/chapters/Architecture/: sections.tex
manual/chapters/Architecture/sections/: architecture.tex  connector.tex  controller.tex  segment.tex  utilities.tex
manual/chapters/Introduction/: sections.tex
manual/chapters/Introduction/sections/: background.tex  introduction.tex  usage-patterns.tex
manual/chapters/deployment-examples/: sections.tex
manual/chapters/deployment-examples/figures/: linux-cluster.tex
manual/chapters/deployment-examples/sections/: linux-clusters.tex
presentations/MLUG/: mlug.tex  preamble.tex
presentations/MLUG/figures/: cloud-bus-mwe.tex  distributed-processing.tex  idea.tex
presentations/MLUG/frames/: cloud-bus.tex  lfg.tex  problem.tex  titleframe.tex  what.tex
presentations/UoM Architecture and Dynamic Rate Limiting/: mlug.tex  preamble.tex  uom-architecture.tex
presentations/UoM Architecture and Dynamic Rate Limiting/figures/: cloud-bus-mwe.tex  cloudbus-transport-design.tex
presentations/UoM Architecture and Dynamic Rate Limiting/frames/: architecture.tex  roadmap.tex  titleframe.tex  uom.tex
src/: CMakeLists.txt  Makefile.am  config.hpp  connectors.hpp  dns.hpp  formats.hpp  interfaces.hpp  io.hpp  logging.hpp  main.cpp  manager.hpp  marshallers.hpp  messages.hpp  metrics.hpp  node.hpp  options.hpp  registry.hpp
src/cloudbus/controller/: controller_connector.cpp  controller_connector.hpp  controller_interfaces.hpp  controller_marshaller.cpp  controller_marshaller.hpp
src/cloudbus/proxy/: proxy_connector.cpp  proxy_connector.hpp  proxy_interfaces.hpp  proxy_marshaller.cpp  proxy_marshaller.hpp
src/cloudbus/segment/: segment_connector.cpp  segment_connector.hpp  segment_interfaces.hpp  segment_marshaller.cpp  segment_marshaller.hpp
src/config/: config.cpp  config.hpp
src/connector/: connector_timerqueue.cpp  connector_timerqueue.hpp  connectors.cpp  connectors.hpp
src/controller/: control_connector.cpp  control_connector.hpp  control_interfaces.cpp  control_interfaces.hpp  control_marshallers.cpp  control_marshallers.hpp  controller.cpp  controller.hpp  controller_connector.cpp  controller_connector.hpp  controller_marshaller.hpp
src/dns/: dns.cpp  dns.hpp  dns_poll.hpp
src/formats/: xmsg.cpp  xmsg.hpp
src/interfaces/: interfaces.cpp  interfaces.hpp
src/io/: buffers.hpp  io.hpp  pipebuf.cpp  poller.cpp  sockbuf.cpp  sockstream.cpp  streams.hpp
src/logging/: logging.cpp  logging.hpp
src/manager/: manager.cpp  manager.hpp
src/marshallers/: marshallers.hpp
src/messages/: messages.cpp  messages.hpp
src/metrics/: metrics.cpp  metrics.hpp
src/node/: node.cpp  node.hpp
src/options/: options.cpp  options.hpp
src/proxy/: proxy.cpp  proxy.hpp  proxy_connector.cpp  proxy_connector.hpp  proxy_interfaces.cpp  proxy_interfaces.hpp  proxy_marshaller.hpp  proxy_marshallers.cpp  proxy_marshallers.hpp
src/registry/: registry.cpp  registry.hpp
src/segment/: segment.cpp  segment.hpp  segment_connector.cpp  segment_connector.hpp  segment_interfaces.cpp  segment_interfaces.hpp  segment_marshaller.hpp  segment_marshallers.cpp  segment_marshallers.hpp
tests/: CMakeLists.txt  Makefile.am  test-config.cpp  test-config.hpp  test-connector.cpp  test-interface.cpp  test-logging.cpp  test-messages.cpp  test-metrics.cpp  tests.cpp  tests.hpp
tests/data/: config.ini
